@@ -1,5 +1,10 @@
 2019-11-15  Richard Biener  <rguenther@suse.de>
 
+	PR tree-optimization/92512
+	* gcc.dg/torture/pr92512.c: New testcase.
+
+2019-11-15  Richard Biener  <rguenther@suse.de>
+
 	PR tree-optimization/92324
 	* gcc.dg/vect/pr92324-4.c: New testcase.
 
